Fixing details on JS and CSS files, adding CSS animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="header">
             <img class="logo" src="assets/images/nyt-logo.svg">
-            <div>
+            <div class="section">
                 <p>Choose a Section:</p>
 
                 <select id="my-select-menu">
@@ -24,7 +24,6 @@
                 </select>
             </div>
 
-
         </div>
 
         <div class="container">
@@ -32,7 +31,7 @@
         </div>
 
         <footer>&copy Copyright 2018 INSTANEWS</footer>
-        
+
         <script src="build/js/jQuery-3.3.1.js"></script>
         <script src="build/js/script.min.js"></script>
 
