--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <meta charset="utf-8">
@@ -11,7 +11,7 @@
     <body>
 
         <div class="header">
-            <img class="logo" src="assets/images/nyt-logo.svg">
+            <img class="logo" src="assets/images/nyt-logo.svg" alt="nytlogo">
             <div class="section">
                 <p>Choose a Section:</p>
 
@@ -30,7 +30,7 @@
 
         </div>
 
-        <footer>&copy Copyright 2018 INSTANEWS</footer>
+        <footer>&copy; Copyright 2018 INSTANEWS</footer>
 
         <script src="build/js/jQuery-3.3.1.js"></script>
         <script src="build/js/script.min.js"></script>
