--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 
         <div class="header">
-            <img class="logo" src="assets/images/nyt-logo.svg" alt="nytlogo">
+            <img class="logo" src="assets/images/nyt-logo.svg" alt="New York Times Logo">
             <div class="section">
                 <p>Choose a Section:</p>
 
